mucho debugging